# gh-flappy-graph

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: test.yml
src/gh_flappy_graph/: cli.py  constants.py  github_client.py
src/gh_flappy_graph/game/: animator.py  bird.py  pipes.py  renderer.py
tests/: test_game.py
